tests/data/midterm/midterm/2018025/Q7/submission_1/.vocStudentGradingReport.txt

[Executed at: Sun Mar 18 23:32:47 PDT 2018]

Traceback (most recent call last):
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24783_5/asnlib/autograde.py", line 14, in <module>
    score=runtest.main()
  File "/home/ccc_v1_c79523__48809/asn24778_45/asn24783_5/asnlib/runtestcases.py", line 65, in main
    stu_work=getattr(__import__(work_package, fromlist=[fun_name]), fun_name)
  File "./q7_work.py", line 22
    if p1 + p2 + p5 + p10 + p20+p50+p100 +p200 = pence:
                                               ^
SyntaxError: invalid syntax
Command exited with non-zero status 1
